add swagger api annotation
